--- a/shop-mall-app/src/main/resources/template/Dao.xml.vm
+++ b/shop-mall-app/src/main/resources/template/Dao.xml.vm
@@ -33,6 +33,6 @@
             #end
             #end
         </set>
-        where id = #{id}
+        where id = #{uniqueId}
     </update>
 </mapper>
